[JOST-160] - Not all times in logging normalized to Zulu
[JOST-163] - No way to stop AbstractReloadingMetadataProvider threads
[JOST-164] - MetadataProvider minRefreshDelay cannot be set greater than 4 hours
[JOST-165] - Update 3rd party runtime library dependencies
[JOST-171] - org.opensaml.saml2.metadata.provider.AbstractReloadingMetadataProvider:246 missing param in logging statement

Changes in Release 2.5.1
=============================================
 - Addressed a signature wrapping attack

Changes in Release 2.5.0
=============================================
[JOST-119] - change pom to create attached -sources jar
[JOST-135] - Update Version class with getVersion() and getName() static methods
[JOST-145] - can not create policy file with EnvironmentAttributeDesignator tag
[JOST-147] - Add support for MDUI extensions into OpenSAML2
[JOST-149] - SubjectTypeImplBuilder typo causes invalid documents to be built
[JOST-150] - Template input needs to be HTML encoded.
[JOST-151] - Fix up some potential concurrency issues with metadata provders and filters
[JOST-152] - Some pom changes for Opensaml2
[JOST-153] - Javadoc fixes
[JOST-154] - FilesystemMetadataProviderTest failed
[JOST-155] - MetadataCredentialResolverCachingTest.testSigning_UnspecToEncryption failed
[JOST-156] - MetadataCredentialResolverCachingTest.testSigning_EncryptionToUnspec failed
[JOST-157] - references to spaces.internet.edu may need changed to wiki.shibboleth.net
[JOST-158] - Update POM for Shib.net Repo and attach generate Javadocs
[JOST-159] - Support EntityAttributes metadata extension

Changes in Release 2.4.1
=============================================
[JOST-134] - Static helper classes should not use static Loggers
[JOST-137] - Option for BasicSAMLArtifactMapEntryFactory to explicitly serialize the SAML message in the newly created entry
[JOST-139] - Update libs for 2.4.1
[JOST-140] - understoodHeaders fields not initialized in HTTPSOAP11Decoder no args constructor